--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: aabelkis <aabelkis@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/07/06 14:01:24 by aabelkis          #+#    #+#              #
-#    Updated: 2025/11/20 16:25:54 by aabelkis         ###   ########.fr        #
+#    Updated: 2026/01/05 17:49:22 by aabelkis         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,9 +14,8 @@ NAME = philo
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -pthread
 
-SRCS = atoi.c error.c ft_strcpy.c itoa.c main.c monitor_routine.c\
-       printing.c routine.c sleeping.c \
-       struct_init.c time.c
+SRCS = atoi.c error.c main_helpers.c main.c monitor_routine.c\
+      printing.c routine.c sleeping.c struct_init.c time.c mealtime.c
 
 OBJS = $(SRCS:.c=.o)
 
